kubernetes/apps/network/traefik/private/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-private-default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik-private
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-secret-private-domain
      protocol: HTTPS
      hostname: "${SECRET_PRIVATE_DOMAIN}"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-private-domain-tls
    - name: https-wildcard-secret-private-domain
      protocol: HTTPS
      hostname: "*.${SECRET_PRIVATE_DOMAIN}"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-private-domain-tls
