kubernetes/apps/network/traefik/private/dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-private
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-private.${SECRET_PRIVATE_DOMAIN}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: ${SECRET_PRIVATE_DOMAIN//./-}-tls
